# model-balancing

./: .gitignore  .readthedocs.yaml  INSTALLATION  MANIFEST.in  README.md  e_coli_example_reference_state.mat  setup.cfg
cmb/demo/: cmb_demo.m
cmb/functions/: cmb_basedir.m  cmb_default_options.m  cmb_display_scores.m  cmb_estimation.m  cmb_generate_artificial_data.m  cmb_load_model_and_data.m  cmb_make_bounds.m  cmb_make_pp.m  cmb_model_and_data.m  cmb_model_artificial_data.m  cmb_objective.m  cmb_prior_file.m  cmb_save_results.m  cmb_state_data_to_data.m  convex_model_balancing.m
cmb/resources/: cmb_prior.tsv
cvxpy/: README.md
cvxpy/examples/: double_branch_model_artificial_no_noise_no_kinetic_data.json  e_coli_artificial_no_noise_no_kinetic_data.json  e_coli_artificial_with_noise_with_noisefree_Keq_data.json  e_coli_artificial_with_noise_with_noisy_kinetic_data.json
cvxpy/prior-table/: README.md  cmb_prior.tsv
doc/: index.html
docs/: requirements.txt
docs/source/: api.rst  bibliography.bib  conf.py  index.rst  json_format.rst  modules.rst
examples/: README.md
examples/JSON/: branch_point_model_elad.json  (+20 more)
matlab/: Contents.m  README.md  demo_cmb_artificial_data.m  model_balancing.m
matlab_BACKUP_2021-02-21/: model_balancing.m
python/: .gitattributes  MANIFEST.in  README.md  balanced_states.tsv  comparison_with_matlab.py  example_convex.ipynb  example_json.ipynb  model_balancing.py  model_balancing_cvx.py  requirements.txt  setup.cfg  setup.py  state_results.tsv  toy_example.ipynb  toy_example.py  toy_example_cvx.ipynb  toy_example_noreg.ipynb
python/docs/source/: conf.py  model_balancing.rst
python/docs/source/model_balancing/: model_balancing.io.rst  model_balancing.model_balancing.rst  model_balancing.rst  model_balancing.util.rst
python/examples/: comparison_with_matlab.py  example_non_convex.ipynb  toy_example.ipynb  toy_example.py
python/model_balancing/: __init__.py  _version.py  comparison_with_matlab.py  model_balancing.py  model_balancing_cvx.py  util.py
python/src/model_balancing/: __init__.py  _version.py  io.py  model_balancing.py  model_balancing_cvx.py  model_balancing_noncvx.py  model_balancing_reversible.py  util.py
resource-data/: README.md
resources/: README.md
(+15564 files in other folders)
