[metadata]
name = model-balancing
url = https://github.com/liebermeister/model-balancing
download_url = https://github.com/liebermeister/model-balancing
project_urls =
    Source Code = https://github.com/liebermeister/model-balancing
    Bug Tracker = https://github.com/liebermeister/model-balancing/issues
author = Wolfram Liebermeister, Elad Noor
author_email = wolfram.liebermeister@gmail.com, eladn@weizmann.ac.il
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
license = MIT
description = Model balancing.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    model balancing
    enzyme cost
    parameter balancing
    bayesian inference
    kinetics

[options]
zip_safe = True
install_requires =
    pandas~=1.2
    matplotlib~=3.4
    seaborn~=0.11
    numpy~=1.20
    scipy~=1.6
    cvxpy~=1.1
    pint~=0.17
    Mosek~=9.2.40
    sbtab~=1.0.0
    path~=15.1
python_requires = >=3.7
tests_require =
    tox
packages = find:
package_dir =
     = src

[options.packages.find]
where = src

[options.extras_require]
test =
    cobra
    pytest
    pytest-cov
    pytest-raises
development =
    black
    isort
    tox
    twine
deployment =
    click
    click-log
    python-dateutil
    requests

[options.package_data]
model_balancing.data =
    *.csv

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/model_balancing/_version.py
versionfile_build = model_balancing/_version.py
tag_prefix =
parentdir_prefix = model-balancing-


